# cursaMalashik

./: CMakeLists.txt  customwidget.cpp  customwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  result.txt
